# src/controllers/auth.controller.ts
@@ -1,8 +1,7 @@
 import { Body, Get, Post, Route, Tags } from "tsoa";
 import { Service } from "typedi";
 import { AuthService } from "../services/authService";
-import { CreateUser } from "../models/interfaces/user";
-import User from "../entities/user.entity";
+import { CreateUser, LoginUser } from "../models/interfaces/user";
 
 @Route("/api/auth")
 @Service()
@@ -12,7 +11,7 @@ export default class AuthController {
   constructor(private authService: AuthService) { }
 
   @Post("/register")
-  public async createUser(@Body() userDetails: CreateUser): Promise<User> {
+  public async createUser(@Body() userDetails: CreateUser): Promise<LoginUser> {
     return await this.authService.createUser(userDetails);
   };
 
@@ -22,5 +21,10 @@ export default class AuthController {
       { id: 1, name: "Roshan" },
       { id: 2, name: "John" }
     ];
+  };
+
+  @Post("/login")
+  public async loginUser(@Body() loginUser: {email: string, password: string}): Promise<LoginUser> {
+    return await this.authService.loginUser(loginUser.email, loginUser.password);
   };
 }
