# src/models/interfaces/user.ts
@@ -21,3 +21,16 @@ export interface CreateUser {
     phoneNumber: string;
     address: string;
 }
+
+export interface LoginUser {
+    userId: string;
+    firstName: string;
+    lastName: string;
+    fullName: string;
+    email: string;
+    phoneNumber: string;
+    address: string;
+    isActive: boolean;
+    createdDate: Date;
+    updatedDate: Date;
+}
