# src/models/joi-schemas/createuser.ts
@@ -1,11 +1,11 @@
 import Joi from 'joi';
 
-export class CreateUser {
+export class UserSchema {
     /**
      * @description To generate schema
      * @return {Joi.Schema} Joi Schema for create user route
     */
-    public static schema(): Joi.Schema {
+    public static create(): Joi.Schema {
         return Joi.object().keys({
             firstName: Joi.string().required(),
             lastName: Joi.string().required(),
@@ -20,6 +20,13 @@ export class CreateUser {
             password: Joi.string().min(8).required(),
             phoneNumber: Joi.string().length(10).required(),
             address: Joi.string().max(50),
+        })
+    }
+
+    public static login(): Joi.Schema {
+        return Joi.object().keys({
+            email: Joi.string().required(),
+            password: Joi.string().required()
         })
     }
 };
